refactor:
- exception 코드 통일
- Controller에서 return 타입 관련 통일
- ApplyCreateService에서 6 -> 18 로 값 변경
- Custom Exception 통일