@@ -1,14 +1,13 @@
 package example.dsg_be.domain.apply.service;
 
 import example.dsg_be.domain.apply.domain.MealType;
-import example.dsg_be.domain.apply.presentation.dto.response.*;
+import example.dsg_be.domain.apply.presentation.dto.response.ApplyListResponse;
 import example.dsg_be.domain.apply.repository.ApplyRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -17,10 +16,10 @@ public class ApplyListReadService {
     private final ApplyRepository applyRepository;
 
     @Transactional(readOnly = true)
-    public List<ApplyListResponse> getList(MealType mealType) {
-        return applyRepository.findAllByMealTypeOrderByCreatedAtDesc(mealType)
+    public List<ApplyListResponse> execute(MealType meal) {
+        return applyRepository.findAllByMealOrderByCreatedAtDesc(meal)
                 .stream()
                 .map(ApplyListResponse::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
